--- a/indexZh.html
+++ b/indexZh.html
@@ -130,7 +130,7 @@
                   <div class="card-body">
                       <h4 class="card-title">Consulting Services</h4>
                       <p class="card-text">我们的咨询服务专注于客户最关键的领域，例如经济研究、战略规划、行动计划、KPI 管理、房地产评估、审计系统等。</p>
-                      <a href="consulting.html" class="btn btn-primary">更多的</a>
+                      <a href="consultingZh.html" class="btn btn-primary">更多的</a>
                   </div>
               </div>
           </div>
@@ -140,7 +140,7 @@
                   <div class="card-body">
                       <h4 class="card-title">Business Development</h4>
                       <p class="card-text">我们的团队提供有关新项目开发的咨询，这些新项目与技术进步相协调，以满足市场需求，同时为经济发展做出贡献。</p>
-                      <a href="business.html" class="btn btn-primary">更多的</a>
+                      <a href="businessZh.html" class="btn btn-primary">更多的</a>
                   </div>
               </div>
           </div>
