--- a/index.html
+++ b/index.html
@@ -1,35 +1,38 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="utf-8">
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
+        integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="shortcut icon" href="images/logo.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Global Intelligence Company for Consulting, Developing & Training Ltd.</title>
+    <title> Global Intelligence Company for Consulting & Developing Ltd. </title>
     <link rel="stylesheet" href="mycss.css" type="text/css" />
-  
+
     <style type="text/css">
-      .container table tr td {
-        text-align: center;
-        font-weight: bold;
-        font-size: 36px;
-      }
-      .container table tr td {
-        font-weight: bold;
-      }
-      .container table tr td {
-        font-weight: bold;
-      }
-      .container table tr td tu {
-        font-weight: bold;
-      }
-      .container table tr td {
-        font-size: 36px;
-      }
-      #languageDropdown {
+        a:link {
+            color: #FFFFFF;
+        }
+        a:hover {
+            color: #FFFFFF;
+        }
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
+            font-size: 1.5rem;
+        }
+        a:visited {
+            color: #F0F0F0;
+        }
+        .navbar.navbar-expand-lg.navbar-light.bg-light .navbar-nav.mr-auto .nav-item.dropdown .dropdown-item {
+            color: #000;
+        }
+        #languageDropdown {
             margin-left: 10px;
             border-color: #663c24;
             background-color: #663c24;
@@ -93,14 +96,9 @@
           scroll-behavior: smooth;
         }
     </style>
+</head>
 
-  </head>
-  
-  <body>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-
+<body>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
@@ -173,29 +171,47 @@
     </nav>
 
     <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-        <h2 style="color:white;" >Global Intelligence</h2>
-      </div>
+        <div class="container">
+            <h2 style="color: white; font-size: 26px;">Global Intelligence</h2>
+        </div>
     </div>
 
-    <div class="container">
-      </br></br></br></br> 
-      <h1 align="center" height="100"> 404 Page not Found!</h1>
-      <p align="center"> The page you were looking for doesn't exist! Click <a href="https://gictd.com"> here </a> to return to the Home page. </p>
-      <p>&nbsp;</p>
+    <div class="container d-flex justify-content-center align-items-center" style="min-height: 65vh;">
+        <div class="row justify-content-center">
+            <div class="col-lg-6">
+                <div class="card" style="width: 100%; border-color: transparent;">
+                    <img src="images/consulting.jpg" alt="consulting.jpg" height="150" class="card-img-top">
+                    <div class="card-body">
+                        <h4 class="card-title">Consulting Services</h4>
+                        <p class="card-text" style="text-align: justify;">Our consulting services focus on our clients' most critical areas such as Economic studies, Strategic planning, Action plans, KPIs management, Real estate appraisal, Auditing systems, ... etc.</p><br>
+                        <a href="consulting.html" class="btn btn-primary">Learn More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="card" style="width: 100%; border-color: transparent;">
+                    <img src="images/business.jpg" alt="business" height="150" class="card-img-top">
+                    <div class="card-body">
+                        <h4 class="card-title">Business Development</h4>
+                        <p class="card-text" style="text-align: justify;">Our team provide consultations regarding the development of new projects that harmonize with the technological advance to meet market needs in light of contribution to the development of the economy.</p>
+                        <a href="business.html" class="btn btn-primary">Learn More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class="footer">
 
-      <a href="privacypolicy.html">Privacy Policy | </a>
-      <a href="sitemap.html">Site Map | </a>
-      <a href="disclaimar.html">Disclaimer</a>
+        <a href="privacypolicy.html">Privacy Policy | </a>
+        <a href="sitemap.html">Site Map | </a>
+        <a href="disclaimar.html">Disclaimer</a>
 
-      <div class="col-lg-12 footer-copyright">
-          <p>Copyright © 2017 - 2021 GICTD Inc. All Rights Reserved </p>
-      </div>
+        <div class="col-lg-12 footer-copyright">
+            <p>Copyright © 2017 - 2021 GICTD Inc. All Rights Reserved </p>
+        </div>
 
-  </div>
-  </body>
+    </div>
 
+</body>
 </html>
