--- a/sitemap.html
+++ b/sitemap.html
@@ -7,29 +7,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="shortcut icon" href="images/logo.png" type="image/png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Global Intelligence Company for Consulting, Developing & Training Ltd.</title>
+    <title>GICTD Site Map</title>
     <link rel="stylesheet" href="mycss.css" type="text/css" />
-  
-    <style type="text/css">
-      .container table tr td {
-        text-align: center;
-        font-weight: bold;
-        font-size: 36px;
-      }
-      .container table tr td {
-        font-weight: bold;
-      }
-      .container table tr td {
-        font-weight: bold;
-      }
-      .container table tr td tu {
-        font-weight: bold;
-      }
-      .container table tr td {
-        font-size: 36px;
-      }
-      #languageDropdown {
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  </head>
+
+  <style>
+    body {
+      background: url("images/background2.jpg") no-repeat center center fixed;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      background-size: cover;
+      -o-background-size: cover;
+    }
+    .breadcrumb {
+        background-color: #663c24;
+    }
+    a {
+      color: #fff;
+    }
+    a:hover {
+      color: #fff;
+    }
+    .card {
+      background-color: transparent;
+    }
+    p.thick {
+      font-weight: 620;
+      font-size: 1.1em;
+    }
+    .dropdown-item.active, .dropdown-item:active {
+        color: #fff;
+        text-decoration: none;
+        background-color: #663c24;
+    }
+    .container-fluid.block .container #sec1 .col-md-12 {
+      color: #000;
+    }
+    #languageDropdown {
             margin-left: 10px;
             border-color: #663c24;
             background-color: #663c24;
@@ -92,15 +107,9 @@
         html {
           scroll-behavior: smooth;
         }
-    </style>
-
-  </head>
+  </style>
   
   <body>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
@@ -174,28 +183,44 @@
 
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h2 style="color:white;" >Global Intelligence</h2>
+          <h2 style="color: white; font-size: 26px;">Global Intelligence</h2>
       </div>
-    </div>
-
-    <div class="container">
-      </br></br></br></br> 
-      <h1 align="center" height="100"> 404 Page not Found!</h1>
-      <p align="center"> The page you were looking for doesn't exist! Click <a href="https://gictd.com"> here </a> to return to the Home page. </p>
-      <p>&nbsp;</p>
-    </div>
-
-    <div class="footer">
-
-      <a href="privacypolicy.html">Privacy Policy | </a>
-      <a href="sitemap.html">Site Map | </a>
-      <a href="disclaimar.html">Disclaimer</a>
-
-      <div class="col-lg-12 footer-copyright">
-          <p>Copyright © 2017 - 2021 GICTD Inc. All Rights Reserved </p>
-      </div>
-
   </div>
-  </body>
 
+    <div class="container-fluid block">
+        <h2 class="card-title">Site Map</h2>
+        <p class="card-text thick" align="left"  text-align: justify;> <div class="container">
+
+          <section id="sec1" style="color: black; font-size: 20px;">
+            <div class="row" style="color: black;">
+              <div class="col-md-12" style="color: black;">
+                <ul style="color: black;">
+                  <li style="color: black;"><a href="index.html" style="color: black;">Home</a></li>
+                  <li style="color: black;"><a href="whoweare.html" style="color: black;">Who we are</a></li>
+                  <li style="color: black;"><a href="mission&vision.html" style="color: black;">Vision & Mission</a></li>
+                  <li style="color: black;"><a href="consulting.html" style="color: black;">Consulting Services</a></li>
+                  <li style="color: black;"><a href="business.html" style="color: black;">Business Development</a></li>
+                </ul>
+              </div> 
+            </div>
+          </section>
+          
+      </div>
+    <!-- /container -->
+      </div>
+      </div>
+      </div>
+   
+      <div class="footer">
+
+        <a href="privacypolicy.html">Privacy Policy | </a>
+        <a href="sitemap.html">Site Map | </a>
+        <a href="disclaimar.html">Disclaimer</a>
+
+        <div class="col-lg-12 footer-copyright">
+            <p>Copyright © 2017 - 2021 GICTD Inc. All Rights Reserved </p>
+        </div>
+
+    </div>   
+  </body>
 </html>
