--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -7,29 +7,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="shortcut icon" href="images/logo.png" type="image/png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Global Intelligence Company for Consulting, Developing & Training Ltd.</title>
+    <title>GICTD Privacy Policy</title>
     <link rel="stylesheet" href="mycss.css" type="text/css" />
-  
-    <style type="text/css">
-      .container table tr td {
-        text-align: center;
-        font-weight: bold;
-        font-size: 36px;
-      }
-      .container table tr td {
-        font-weight: bold;
-      }
-      .container table tr td {
-        font-weight: bold;
-      }
-      .container table tr td tu {
-        font-weight: bold;
-      }
-      .container table tr td {
-        font-size: 36px;
-      }
-      #languageDropdown {
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  </head>
+
+  <style>
+    body{
+      background: url("images/background2.jpg") no-repeat center center fixed;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      background-size: cover;
+      -o-background-size: cover;
+    }
+    .breadcrumb {
+      background-color: #663c24;
+    }
+    a {
+        color: #fff;
+    }
+    a:hover {
+        color: #fff;
+    }
+    .card {
+      background-color: transparent;
+    }
+    p.thick {
+      font-weight: 620;
+      font-size: 1.1em;
+    }
+    .dropdown-item.active, .dropdown-item:active {
+        color: #fff;
+        text-decoration: none;
+        background-color: #663c24;
+    }
+    #languageDropdown {
             margin-left: 10px;
             border-color: #663c24;
             background-color: #663c24;
@@ -92,15 +104,9 @@
         html {
           scroll-behavior: smooth;
         }
-    </style>
+  </style>
 
-  </head>
-  
   <body>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
@@ -172,19 +178,78 @@
         </div>
     </nav>
 
-    <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-        <h2 style="color:white;" >Global Intelligence</h2>
-      </div>
-    </div>
+    
+    <nav aria-label="breadcrumb" role="navigation">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="#">Home</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Privacy Policy</li>
+      </ol>
+    </nav>
 
-    <div class="container">
-      </br></br></br></br> 
-      <h1 align="center" height="100"> 404 Page not Found!</h1>
-      <p align="center"> The page you were looking for doesn't exist! Click <a href="https://gictd.com"> here </a> to return to the Home page. </p>
-      <p>&nbsp;</p>
-    </div>
+    <div class="container-fluid block">
 
+      <h2 class="card-title">  Privacy Policy</h2>
+      <p class="card-text thick" align="left"  text-align: justify;> <p>This Privacy Policy governs the manner in which Global Intelligence for Consulting, Training, Developing collects, uses, maintains and discloses information collected from users  of the https://gictd.com/ website.</p>
+
+      <h3>Personal identification information</h3>
+      <p>We may collect personal identification information from Users in a variety of ways, including, but not limited to, when Users visit our site, fill out a form, and in connection with other activities, services, features or resources we make available on our Site. Users may be asked for, as appropriate, name, email address, mailing address, phone number. Users may, however, visit our Site anonymously. We will collect personal identification information from Users only if they voluntarily submit such information to us. Users can always refuse to supply personally identification information, except that it may prevent them from engaging in certain Site related activities.</p>
+
+      <h3>Non-personal identification information</h3>
+      <p>We may collect non-personal identification information about Users whenever they interact with our Site. Non-personal identification information may include the browser name, the type of computer and technical information about Users means of connection to our Site, such as the operating system and the Internet service providers utilized and other similar information.</p>
+
+      <h3>Web browser cookies</h3>
+      <p>Our Site may use "cookies" to enhance User experience. User's web browser places cookies on their hard drive for record-keeping purposes and sometimes to track information about them. User may choose to set their web browser to refuse cookies, or to alert you when cookies are being sent. If they do so, note that some parts of the Site may not function properly.</p>
+
+      <h3>How we use collected information</h3>
+      <p>Global Intelligence for Consulting, Training, Developing may collect and use Users personal information for the following purposes:</p>
+      <ul>
+        <li>
+          <i>To run and operate our Site</i><br/>
+          We may need your information display content on the Site correctly.
+        </li>
+        <li>
+          <i>To improve customer service</i><br/>
+          Information you provide helps us respond to your customer service requests and support needs more efficiently.
+        </li>
+        <li>
+          <i>To personalize user experience</i><br/>
+          We may use information in the aggregate to understand how our Users as a group use the services and resources provided on our Site.
+        </li>
+        <li>
+          <i>To run a promotion, contest, survey or other Site feature</i><br/>
+          To send Users information they agreed to receive about topics we think will be of interest to them.
+        </li>
+        <li>
+          <i>To send periodic emails</i><br/>
+          We may use the email address to send User information and updates pertaining to their order. It may also be used to respond to their inquiries, questions, and/or other requests. 
+        </li>
+      </ul>
+
+      <h3>How we protect your information</h3>
+      <p>We adopt appropriate data collection, storage and processing practices and security measures to protect against unauthorized access, alteration, disclosure or destruction of your personal information, username, password, transaction information and data stored on our Site.</p>
+
+      <h3>Sharing your personal information</h3>
+      <p>We do not sell, trade, or rent Users personal identification information to others. We may share generic aggregated demographic information not linked to any personal identification information regarding visitors and users with our business partners, trusted affiliates and advertisers for the purposes outlined above. </p>
+
+      <h3>Electronic newsletters</h3>
+      <p>If User decides to opt-in to our mailing list, they will receive emails that may include company news, updates, related product or service information, etc.</p>
+
+      <h3>Changes to this privacy policy</h3>
+      <p>Global Intelligence for Consulting, Training, Developing has the discretion to update this privacy policy at any time. When we do, we will send you an email. We encourage Users to frequently check this page for any changes to stay informed about how we are helping to protect the personal information we collect. You acknowledge and agree that it is your responsibility to review this privacy policy periodically and become aware of modifications.</p>
+
+      <h3>Your acceptance of these terms</h3>
+      <p>By using this Site, you signify your acceptance of this policy. If you do not agree to this policy, please do not use our Site. Your continued use of the Site following the posting of changes to this policy will be deemed your acceptance of those changes. This privacy policy was built <a href="https://privacypolicies.com/" target="_blank">with a free policy generator</a>.</p>
+
+      <h3>Contacting us</h3>
+      <p>If you have any questions about this Privacy Policy, the practices of this site, or your dealings with this site, please contact us.</p>
+
+      <p>This document was last updated on December 27, 2017</p>
+      </p>
+        </br></br></br>
+    </div>
+    </div>
+    </div>
+       
     <div class="footer">
 
       <a href="privacypolicy.html">Privacy Policy | </a>
@@ -197,5 +262,5 @@
 
   </div>
   </body>
-
+  
 </html>
