--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
     <!-- Footer -->
     <div class="footer">
-        <a href="indexMobTest.html">Privacy Policy | </a>
+        <a href="privacypolicy.html">Privacy Policy | </a>
         <a href="sitemap.html">Site Map | </a>
         <a href="disclaimar.html">Disclaimer</a>
         <div class="col-lg-12 footer-copyright">
